@@ -2,6 +2,7 @@
 # This file is updated with Maddlog
 
 * Thu Jan 18 2018 Sjoerd Mullender <sjoerd@acm.org>
+- Removed unused functions BATmemsize and BATvmsize.
 - Removed the tnodense property: it was maintained but never actually
   used, not even stored.
 
